--- a/package.json
+++ b/package.json
@@ -9,13 +9,16 @@
     "dev": " export $(cat .env | xargs) && nodemon hubot -a slack"
   },
   "dependencies": {
+    "axios": "^0.24.0",
     "hubot": "^3.3.2",
     "hubot-diagnostics": "^1.0.0",
     "hubot-env": "^0.0.2",
     "hubot-help": "^1.0.1",
     "hubot-redis-brain": "^1.0.0",
     "hubot-rules": "^1.0.0",
-    "hubot-slack": "^4.9.0"
+    "hubot-slack": "^4.9.0",
+    "moment": "^2.29.1",
+    "unique-random-array": "^3.0.0"
   },
   "engines": {
     "node": "> 4.0.0"
